# battle-royal-server

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
src/: main.rs
