[package]
name = "battle-royal-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3.28"
serde_json = "1.0.104"
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = [
    "frontend",
]